마이페이지 디자인 2차 수정
검색창 디자인 추가 수정
프로필 기본 이미지 추가

라운드 이미지 수정이 추후 필요함

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,9 @@ dependencies {
 
     //SlidingUpPanel
     implementation 'com.github.hannesa2:AndroidSlidingUpPanel:4.2.1'
+
+    //Dependency for circular ImageView
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    implementation 'com.makeramen:roundedimageview:2.3.0'
 }
