비밀번호 변경화면 디자인 완료, setting화면 수정
-'취소'버튼 삭제
- 전체적인 레이아웃

-이전 버튼 삭제 및 다음 버튼 삭제를 통해 통일감 증진ㄴ

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,10 +24,11 @@
         </activity>
         <activity android:name=".LoginActivity" />
         <activity android:name=".MainActivity"
-                  android:windowSoftInputMode="adjustPan"/>
+            android:windowSoftInputMode="adjustPan"/>
         <activity android:name=".SignUpActivity" />
         <activity android:name=".SearchActivity" />
         <activity android:name=".CardChangeActivity" />
+        <activity android:name=".PasswordActivity"/>
 
         <!--
         <activity android:name=".CardChangeActivity"
