post페이지: 이미지,게시글 업로드,

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         <activity android:name=".SearchActivity" />
 <!--        <activity android:name=".CardChangeActivity" />-->
         <activity android:name=".PasswordActivity"/>
-
+        <activity android:name=".PostActivity" />
         <!--
         <activity android:name=".CardChangeActivity"
             android:parentActivityName=".MainActivity"></activity> -->
