--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,17 +4,15 @@
     <!-- 읽기 퍼미션 설정(갤러리 접근) -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
-    <!-- usesCleartextTraffic => Access denied finding property 뜨길래 넣어봄 문제 되면 지워두 돼! -->
     <application
-        android:usesCleartextTraffic="true"
-
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Potfollio">
-
+        android:theme="@style/Theme.Potfollio"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".CardTransActivity"></activity>
         <activity android:name=".StartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,17 +21,13 @@
             </intent-filter>
         </activity>
         <activity android:name=".LoginActivity" />
-        <activity android:name=".MainActivity"
-            android:windowSoftInputMode="adjustPan"/>
+        <activity
+            android:name=".MainActivity"
+            android:windowSoftInputMode="adjustPan" />
         <activity android:name=".SignUpActivity" />
-        <activity android:name=".SearchActivity" />
-<!--        <activity android:name=".CardChangeActivity" />-->
-        <activity android:name=".PasswordActivity"/>
+<!--        <activity android:name=".SearchActivity" /> &lt;!&ndash; <activity android:name=".CardChangeActivity" /> &ndash;&gt;-->
+        <activity android:name=".PasswordActivity" />
         <activity android:name=".PostActivity" />
-        <!--
-        <activity android:name=".CardChangeActivity"
-            android:parentActivityName=".MainActivity"></activity> -->
-
     </application>
 
 </manifest>
