--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Potfollio"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Code_ImgActivity"></activity>
-        <activity android:name=".CardTransActivity" />
+        <activity android:name=".CardTransActivity"></activity>
         <activity android:name=".StartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,9 +24,13 @@
         <activity
             android:name=".MainActivity"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".SignUpActivity" /> <!-- <activity android:name=".SearchActivity" /> &lt;!&ndash; <activity android:name=".CardChangeActivity" /> &ndash;&gt; -->
+        <activity android:name=".SignUpActivity" />
+<!--        <activity android:name=".SearchActivity" /> &lt;!&ndash; <activity android:name=".CardChangeActivity" /> &ndash;&gt;-->
         <activity android:name=".PasswordActivity" />
         <activity android:name=".PostActivity" />
+        <activity android:name=".SearchPostActivity" />
+        <activity android:name=".HotActivity" />
+
     </application>
 
 </manifest>
