게시글 이동 구현 + 게시글 xml구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         <activity android:name=".PostActivity" />
         <activity android:name=".SearchPostActivity" />
         <activity android:name=".HotActivity" />
-
+        <activity android:name=".Code_ImgActivity" />
     </application>
 
 </manifest>
