--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_app_logo_round"
-        android:label="@string/app_name"
+        android:label="PotFolio"
         android:roundIcon="@mipmap/ic_app_logo_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Potfollio"
@@ -26,7 +26,7 @@
         <activity
             android:name=".MainActivity"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".SignUpActivity" /> <!-- <activity android:name=".SearchActivity" /> &lt;!&ndash; <activity android:name=".CardChangeActivity" /> &ndash;&gt; -->
+        <activity android:name=".SignUpActivity" />
         <activity android:name=".PasswordActivity" />
         <activity android:name=".PostActivity" />
         <activity android:name=".SearchPostActivity" />
